--- a/.env_example
+++ b/.env_example
@@ -3,6 +3,12 @@ API_SECRET=
 
 API_URL_V1=https://test.api.amadeus.com/v1
 API_URL_V2=https://test.api.amadeus.com/v2
+API_URL_V3=https://test.api.amadeus.com/v3
 
 API_TOKEN_URL=/security/oauth2/token
 API_HOTELS_URL=/reference-data/locations/hotels/by-city
+API_HOTEL_DETAIL_URL=/shopping/hotel-offers
+API_HOTEL_RATING_URL=/e-reputation/hotel-sentiments
+
+API_GOOGLE_MAPS_URL=https://maps.googleapis.com/maps/api/geocode/json
+API_GOOGLE_MAPS_KEY=
